# jsonschema-strip

./: CMakeLists.txt  DEPENDENCIES  Makefile  strip.cc
.github/workflows/: ci.yml
